--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ box-sizing: border-box;
 }
 
 .container {
-    width: 1500px;
+    width: 1300px;
     margin: 0 auto;
 }
 
@@ -35,10 +35,12 @@ body {
     color: white;
 text-decoration: none;
 transition: all 0.3s ease;
+transition: transform 0.3s ease;
 }
 
 .a-box ul li a:hover {
     color: #BAED29;
+    transform: scale(3);
 }
 
 .a-box {
@@ -68,8 +70,193 @@ transition: all 0.3s ease;
 }
 
 .get-box {
-    width:697px;
-height:743px;
-border-radius: 24px 24px 24px 24px;
-background-color: #EEEEEE;
+    width:600px;
+height:650px;
+background: rgba(255, 255, 255, 0.1); 
+    backdrop-filter: blur(10px); 
+    border-radius: 10px;
+    border: 1px solid white;    
+    margin-left: 170px;
+    margin-top: 90px;
+    padding: 40px;
+}
+
+.contact-box p {
+    color: white;
+}
+
+.get-box h2 {
+color: white;
+}
+
+.get-box p {
+    color: white;
+    margin-top: 20px;
+}
+
+.get-box input {
+    height: 70px;
+    width: 520px;
+    border-radius: 10px;
+    border: none;
+    padding-left: 20px;
+    margin-top: 20px;
+    padding-right: 20px;
+}
+
+.get-box form {
+    margin-top: 20px;
+}
+
+.get-box form button {
+    width: 197px;
+height: 61px;
+border-radius: 50px 50px 50px 50px;
+background-color: #BAED29;
+margin-top: 35px;
+border: none;
+transition: transform 0.3s ease;
+}
+
+.first-box {
+    display: flex;
+}
+
+.prof-box h1 {
+color: white;
+font-size: 60px;
+margin-top: 90px;
+margin-left: 40px;
+}
+
+.prof-box p {
+    color: white;
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
+.blur {
+    width:850px;
+    height:280px;
+    background: rgba(255, 255, 255, 0.1); 
+        backdrop-filter: blur(10px); 
+        border-radius: 10px 0px 0 10px;
+        border: 1px solid white;
+        margin-top: 30px;
+        margin-left: 40px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+}
+
+.img1 {
+    width: 200px;
+    height: 200px;
+    transition: transform 0.3s ease;
+}
+
+.img2 {
+    width: 170px;
+    height: 200px;
+    transition: transform 0.3s ease;
+
+}
+
+.rec1 {
+    width: 50px;
+height: 12px;
+border-radius: 50px ;
+background-color: #BAED29;
+transition: transform 0.3s ease;
+}
+
+.rec2 {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: white;
+    transition: transform 0.3s ease;
+}
+
+.rec-box {
+    display: flex;
+    gap: 10px;
+    margin-top: 50px;
+    margin-left: 40px;
+}
+
+.img1:hover {
+    transform: scale(1.2);
+} 
+
+.img2:hover {
+    transform: scale(1.2);
+} 
+
+.get-box form button:hover {
+    transform: scale(1.2);
+}
+
+.rec1:hover {
+    transform: scale(1.2);  
+}
+
+.rec2:hover {
+    transform: scale(1.2);  
+}
+
+.second-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.img-box {
+    margin-top: 150px;
+    display: flex;
+}
+
+.cac {
+    margin-right: 20px;
+    margin-top: 55px;
+}
+
+.about-box {
+    margin-top: 150px;
+    margin-left: 40px;
+}
+
+.about-box h1 {
+    font-size: 50px;
+}
+
+.cac {
+    width: 278px;
+    height: 557px;
+}
+
+.supur {
+    width: 322px;
+    height: 658px;
+}
+
+.about-box p {
+    margin-top: 30px;
+    font-size: 17px;
+}
+
+.chec-box {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.chec-box label {
+    font-size: 20px;
+
+}
+
+.naush {
+    width: 624px;
+    height: 280px;
+    margin-top: 30px;
 }
